--- a/admin.html
+++ b/admin.html
@@ -211,6 +211,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/config.js"></script>
     <script src="js/api.js"></script>
     <script src="js/db.js"></script>
