--- a/movies.html
+++ b/movies.html
@@ -140,6 +140,7 @@
             loadBtn.textContent = 'Loading...';
 
             try {
+                await DB.ready;
                 let data;
 
                 if (currentGenre) {
