--- a/admin.html
+++ b/admin.html
@@ -137,7 +137,12 @@
 
     <div class="admin-container">
         <div class="admin-header">
-            <h1>Manage Content</h1>
+            <div>
+                <h1>Manage Content</h1>
+                <div id="dbStatus" style="font-size: 0.8rem; margin-top: 0.3rem;">
+                    Checking Supabase connection...
+                </div>
+            </div>
             <div class="view-toggles">
                 <button onclick="switchView('search')" class="btn btn-primary" id="btnSearch">Add New</button>
                 <button onclick="switchView('library')" class="btn btn-secondary" id="btnLibrary">My Library</button>
