Fix data loss during sync and add manual upload button

--- a/admin.html
+++ b/admin.html
@@ -146,6 +146,8 @@
             <div class="view-toggles">
                 <button onclick="switchView('search')" class="btn btn-primary" id="btnSearch">Add New</button>
                 <button onclick="switchView('library')" class="btn btn-secondary" id="btnLibrary">My Library</button>
+                <button onclick="manualSync()" class="btn btn-secondary" style="background: #444;">☁️ Push to
+                    Cloud</button>
             </div>
         </div>
 
