--- a/www/movies.html
+++ b/www/movies.html
@@ -86,6 +86,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
     <script src="js/api.js"></script>
@@ -139,6 +140,7 @@
             loadBtn.textContent = 'Loading...';
 
             try {
+                await DB.ready;
                 let data;
 
                 if (currentGenre) {
