--- a/www/index.html
+++ b/www/index.html
@@ -196,6 +196,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
     <script src="js/api.js"></script>
