--- a/www/movie.html
+++ b/www/movie.html
@@ -150,6 +150,7 @@
 
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
     <script src="js/api.js"></script>
@@ -165,6 +166,7 @@
 
         async function loadMovieDetails() {
             try {
+                await DB.ready;
                 const movie = await API.getDetails(movieId, 'movie');
 
                 document.title = `${movie.title} | Streamiz`;
