--- a/www/tv.html
+++ b/www/tv.html
@@ -156,6 +156,7 @@
 
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
     <script src="js/api.js"></script>
@@ -174,6 +175,7 @@
 
         async function loadShowDetails() {
             try {
+                await DB.ready;
                 showData = await API.getDetails(showId, 'tv');
 
                 document.title = `${showData.name} | Streamiz`;
