Fix: Improved Supabase connection status with retry logic and better error messages

--- a/admin.html
+++ b/admin.html
@@ -139,8 +139,8 @@
         <div class="admin-header">
             <div>
                 <h1>Manage Content</h1>
-                <div id="dbStatus" style="font-size: 0.8rem; margin-top: 0.3rem;">
-                    Checking Supabase connection...
+                <div id="dbStatus" style="font-size: 0.8rem; margin-top: 0.3rem; color: #eab308;">
+                    🟡 Connecting to Supabase...
                 </div>
             </div>
             <div class="view-toggles">
